radiant/public/stylesheets/admin.css
body {
	font-size: 95%;
	font-family: "Lucida Grande", "Bitstream Vera Sans", Helvetica, Verdana, Arial, sans-serif;
	margin: 0;
	padding: 0;
}
img { border: 0; }
h3 {
  font-size: 130%;
  margin-top: 1.25em;
  margin-bottom: .5em;
}
.hidden {
	display: none;
}
.clear {
	font-size: 1px;
	clear: both;
}
.warning {
	color: red;
}

/* main layout */

#header {
	background-color: #c00;
	color: white;
	float: left;
	width: 100%;
}
#header a, #header a:visited {
	color: white;
	text-decoration: none;
}
#header a:hover, #header a:visited:hover {
	text-decoration: underline;
}
#site-title {
	font-size: 150%;
	font-weight: bold;
	margin-top: 20px;
	margin-left: 20px;
}
#site-subtitle {
	color: #fc6;
	font-size: 90%;
	font-style: italic;
	margin-left: 20px;
	margin-bottom: 20px;
}
#navigation {
	float: right;
	font-size: 90%;
	margin-top: -20px;
	padding-right: 17px;
}
#navigation a, #navigation a:visited {
	background-color: #eae3c5;
	color: black;
	display: inline-block;
	margin: -3px;
	margin-right: 3px;
	padding: 6px;
	padding-left: 13px;
	padding-right: 13px;
	text-decoration: none;
}
#navigation a:hover, #navigation a:visited:hover {
	text-decoration: underline;
}
#navigation strong a, #navigation strong a:visited {
	background-color: white;
}
#navigation .separator {
	display: none;
}
#main {
	float: left;
	width: 100%;
}
#content {
  font-size: 95%;
	padding: 20px;
}
#footer {
	color: #999;
	background-color: #f7f7f7;
	border-top: 1px solid #eaeaea;
	font-size: 80%;
	float: left;
	padding-top: 20px;
	padding-bottom: 20px;
	width: 100%;
}
#footer p {
	padding-left: 20px;
	padding-right: 20px;
}
#site-links {
	color: #f5cbcb;
	font-size: 90%;
	margin: 0;
	position: absolute;
	right: 0;
	top: 20px;
}
#site-links a, #site-links a:visited {
	color: white;
}
#site-links a:hover, #site-links a:visited:hover {
	text-decoration: none;
}
#site-links strong a, #site-links strong a:visited {
  text-decoration: none;
}


/* messages */

#notice, #error {
	color: white;
	margin-top: 25px;
	margin-left: 20px;
	margin-right: 20px;
	padding: .75em;
	padding-top: 0;
	padding-bottom: 0;
}
#notice {
	background-color: #0c3;
	border: 3px solid #7FE699;
}
#error {
	background-color: #c00;
	border: 3px solid #e67f00;
}
h1 { 
	margin-top: 0;
}


/* index table */

#content table.index {
	font-size: 90%;
	width: 100%;
	margin-bottom: 2em;
	border-bottom: 1px solid #eaeaea;
}
#content table.index td, table.index th {
	text-align: left;
}
#content table.index th {
	background-color: #f5f5f5;
	font-size: 90%;
	font-weight: normal;
	padding: 4px;
	padding-top: 2px;
	padding-bottom: 2px;
}
#content table.index td {
	border-top: 1px solid #eaeaea;
	padding: 4px;
}
#content table.index .status {
	width: 8em;
}
#content table.index td.status {
	color: #9eb3bf;
}
#content table.index td.status.draft-status {
  color: #c00;
}
#content table.index td.status.published-status {
  color: black;
}
#content table.index td.status.hidden-stats {
  color: #0c0;
}
#content table.index .add-child {
	width: 100px;
	padding-left: 0;
}
#content table.index .remove {
	width: 100px;
	padding-left: 0;
}
#content table.index .node .layout,
#content table.index .node .snippet,
#content table.index .node .user {
  font-size: 115%;
  font-weight: bold;
}
#content table.index .node .user small {
  color: #666;
  font-size: 90%;
  font-style: italic;
  font-weight: normal;
  margin-left: .5em;
}
#content table.index .node.level-0 .page {
	font-size: 120%;
	font-weight: bold;
}
#content table.index .node.level-1 .page{
  font-size: 115%;
	font-weight: bold;
}
#content table.index .node.level-2 .page {
  font-size: 115%;
}
#content table.index .node.level-3 .page{
  font-size: 105%;
}
#content table.index .node .page a {
  text-decoration: none;
}
#content table.index .node .page a .title, #content table.index .node .page a:visited .title,
#content table.index .node .snippet a, #content table.index .node .snippet a:visited,
#content table.index .node .layout a, #content table.index .node .layout a:visited,
#content table.index .node .user a, #content table.index .node .user a:visited {
	color: black;
	text-decoration: none;
}

#content table.index .node.virtual .page a .title, #content table.index .node.virtual .page a:visited .title {
  color: #9eb3bf;
}

#content table.index .node .page a:hover .title, #content table.index .node .page a:visited:hover .title,
#content table.index .node .snippet a:hover, #content table.index .node .snippet a:visited:hover,
#content table.index .node .layout a:hover, #content table.index .node .layout a:visited:hover,
#content table.index .node .user a:hover, #content table.index .node .user a:visited:hover {
	color: blue;
	text-decoration: underline;
}
#content table.index td.note {
	color: silver;
	font-size: 85%;
	font-style: italic;
	padding: 3em;
	text-align: center;
}
#content table.index .node .page .info {
	color: #9eb3bf;
	font-style: italic;
	font-weight: normal;
}
#content table.index tr.highlight {
	background-color: #ffffb3;
}
#content table.index .no-children .w1 {
  padding-left: 23px;
}
#content table.index .page .title,
#content table.index .page .info {
  position: relative;
  top: 2px;
}
#content table.index .page img.expander {
  padding: 3px;
  padding-top: 6px;
  padding-bottom: 6px;
}

/* form elements */

#content .form-area {
	background-color: #f5f1e2;
	margin-left: -20px;
	margin-right: -20px;
	padding: 20px;
	padding-top: 15px;
	padding-bottom: 10px;
}
#content .form-area h3 {
	font-size: 100%;
	margin-bottom: 0;
}
#content .form-area p {
	margin-top: 0;
}
#content .form-area small {
	font-size: 75%;
}
#content .form-area label {
	font-weight: bold;
}
#content .form-area .textbox {
	font-size: 100%;
}
#content .form-area .title {
	margin-bottom: 0;
}
#content .form-area .title label {
	display: block;
}
#content .form-area .title .textbox {
	font-family: Georgia, Palatino, "Times New Roman", Times, serif;
	font-size: 200%;
	width: 100%;
}
#content .form-area .content {
  margin-top: 1em;
  margin-bottom: 1em;
}
#content .form-area .row {
	clear: both;
	margin-top: 1em;
}
#content .form-area .row p,
#content .form-area .row .fieldset {
	float: left;
	margin-right: 2em;
	margin-bottom: 1em;
}
#content .form-area .fieldset {
	margin-right: .5em;
}
#content .form-area .fieldset td {
	padding-right: .5em;
}
#content .form-area .error-with-field .error {
	color: #f00;
	display: block;
	padding: 2px;
	padding-top: 0;
}
#content .buttons {
	font-size: 80%;
	margin-top: 2.5em;
}
#content .button {
	font-size: 150%;
}
#content table.fieldset {
  border-bottom: 1px solid #DFD3C3;
  margin-bottom: 1.5em;
  width: 100%;
}
#content table.fieldset td {
  background-color: white;
  border-top: 1px solid #DFD3C3;
  padding: 6px;
}
#content table.fieldset td.label {
  padding-top: 10px;
  vertical-align: top;
  text-align: right;
  width: 20%;
}
#content table.fieldset td.label .optional {
  color: #929488;
}
#content table.fieldset td.field .textbox {
  width: 100%;
}
#content table.fieldset td.help {
  background-color: #F5F1E2;
  font-size: 80%;
  padding-left: 10px;
  width: 40%;
}
#content table.fieldset input {
  font-size: 100%;
}
#content table.fieldset .checkbox {
  display: block;
  float: left;
  padding-top: 4px;
  width: 10em;
}
#content table.fieldset .error-with-field small {
  color: red;
}

/* tabs */

#content #tabs {
	background-image: url(/images/brown-bottom-line.gif);
	background-position: bottom;
	background-repeat: repeat-x;
	float: left;
	width: 100%;
}
#content #tabs .tab {
	background-color: #eae3c5;
	border-bottom: 1px solid #cdc295;
	color: black;
	display: block;
	font-size: 100%;
	float: left;
	margin-right: 3px;
	padding: 15px;
	padding-top: 7px;
	padding-bottom: 4px;
	text-decoration: none;
	text-transform: titlecase;
}
#content #tabs .tab.here {
	background-color: white;
	border: 1px solid #cdc295;
	border-bottom: 1px solid white;
	font-weight: bold;
	padding-left: 13px;
	padding-right: 13px;
	padding-top: 6px;
}
#content #tab-toolbar {
	float: right;
	margin-top: .35em;
}
#content #pages {
	background: white;
	border: 1px solid #cdc295;
	border-top-width: 0;
	clear: both;
}
#content #pages .page {
	padding: 20px;
}
#content textarea {
	height: 280px;
	border: 1px solid #cdc295;
	font-family: Monaco, "Courier New", Courier, monospace;
	font-size: 85%;
}
#content #pages label {
  font-size: 85%;
  font-weight: normal !important;
}


/* popups */

#content .popup {
  background-color: white;
  border: 5px solid silver;
  padding: 2em;
  padding-top: 1em;
  padding-bottom: .5em;
}
#content .popup .busy {
  float: right;
}
#content .popup h3 {
  margin-top: 0;
}
#content .popup .close-link {
  font-size: 85%;
  color: #999;
}

